# spartoi

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/client/: spartan_client.cpp
examples/server/: drogon.config.json  spartan_server.cpp
examples/server/files/: index.gmi
spartoi/: SpartanClient.cpp  SpartanClient.hpp  SpartanServer.cpp  SpartanServer.hpp  SpartanServerPlgin.hpp  SpartanServerPlugin.cpp
